--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
                 </div>
             </div>
             <div class="side-board">
-                <h3>GUEST</h3>
-                <p class="score" id="gscore-el">0</p>
+                <h3>AWAY</h3>
+                <p class="score" id="ascore-el">0</p>
                 <div class="buttons">
                     <div class="buttons1">
-                        <button class="button" id="penaltyG-btn" onclick="penaltyG()">Penalty kick<br>(+3)</button>
-                        <button class="button" id="dropG-btn" onclick="dropG()">Drop goal<br>(+3)</button>
+                        <button class="button" id="penaltyA-btn" onclick="penaltyA()">Penalty kick<br>(+3)</button>
+                        <button class="button" id="dropA-btn" onclick="dropA()">Drop goal<br>(+3)</button>
                     </div>
                     <div class="tryButtons">
-                        <button class="button try" id="tryG-btn" onclick="tryG()">Try!<br>(+5)</button>
+                        <button class="button try" id="tryA-btn" onclick="tryA()">Try!<br>(+5)</button>
                         <div class="buttons2">
-                            <button class="button" id="missedG-btn" onclick="missedG()">Missed<br>conversion<br>(0)</button>
-                            <button class="button" id="conversionG-btn" onclick="conversionG()">Conversion<br>(+2)</button>
+                            <button class="button" id="missedA-btn" onclick="missedA()">Missed<br>conversion<br>(0)</button>
+                            <button class="button" id="conversionA-btn" onclick="conversionA()">Conversion<br>(+2)</button>
                         </div>
                     </div>
                 </div>
